--- a/data/cities/ciudad-satelite/peluqueria-avenida-escalona-y-aguero.yml
+++ b/data/cities/ciudad-satelite/peluqueria-avenida-escalona-y-aguero.yml
@@ -1,11 +1,11 @@
-id: 4548572052
+id: 7618663236
 type: node
-latitude: -16.52575
-longitude: -68.15055
+latitude: -16.53028
+longitude: -68.15924
 postcode: ""
 city: Ciudad Satélite
-street: Calle Hno. E. Morales
+street: Avenida Escalona y Aguero
 housenumber: ""
-phone: +591 70146392
+phone: ""
 opening_hours: Mo-Sa 09:00-18:00
 website: ""
