--- a/data/cities/ciudad-satelite/peluqueria.yml
+++ b/data/cities/ciudad-satelite/peluqueria.yml
@@ -1,11 +1,11 @@
-id: 7618663236
+id: 7571743147
 type: node
-latitude: -16.53028
-longitude: -68.15924
+latitude: -16.52551
+longitude: -68.15371
 postcode: ""
 city: Ciudad Satélite
-street: Avenida Escalona y Aguero
+street: Avenida del Policía
 housenumber: ""
 phone: ""
-opening_hours: Mo-Sa 09:00-18:00
+opening_hours: Mo-Fr 09:00-17:00
 website: ""
