--- a/data/cities/ciudad-satelite/tienda-de-variedades-calle-31-c-3.yml
+++ b/data/cities/ciudad-satelite/tienda-de-variedades-calle-31-c-3.yml
@@ -1,11 +1,11 @@
-id: 7573168873
+id: 7563964250
 type: node
-latitude: -16.53139
-longitude: -68.1543
+latitude: -16.53256
+longitude: -68.15135
 postcode: ""
 city: Ciudad Satélite
 street: Calle 31 C
 housenumber: ""
-phone: +591 78760524
-opening_hours: ""
-website: https://www.bonnsupermercados.com/
+phone: ""
+opening_hours: Mo-Sa 09:00-18:00
+website: ""
