--- a/data/cities/ciudad-satelite/tienda-de-barrio-calle-eduardo-calderon-2.yml
+++ b/data/cities/ciudad-satelite/tienda-de-barrio-calle-eduardo-calderon-2.yml
@@ -1,10 +1,10 @@
-id: 9784032962
+id: 12307930439
 type: node
-latitude: -16.52663
-longitude: -68.15765
+latitude: -16.52788
+longitude: -68.15397
 postcode: ""
 city: Ciudad Satélite
-street: Avenida Escalona y Aguero
+street: Calle Eduardo Calderon
 housenumber: ""
 phone: ""
 opening_hours: ""
