--- a/data/cities/ciudad-satelite/tienda-de-variedades-calle-placido-molina.yml
+++ b/data/cities/ciudad-satelite/tienda-de-variedades-calle-placido-molina.yml
@@ -7,5 +7,5 @@ city: Ciudad Satélite
 street: Calle Placido Molina
 housenumber: ""
 phone: ""
-opening_hours: Mo-Sa 09:00-18:00
+opening_hours: "off"
 website: ""
