--- a/data/cities/santa-cruz-de-la-sierra/boleteria-avenida-jose-banegas.yml
+++ b/data/cities/santa-cruz-de-la-sierra/boleteria-avenida-jose-banegas.yml
@@ -1,10 +1,10 @@
-id: 4377609034
+id: 11221659067
 type: node
-latitude: -17.78172
-longitude: -63.18229
+latitude: -17.78287
+longitude: -63.20789
 postcode: ""
 city: Santa Cruz de la Sierra
-street: Calle Florida
+street: Avenida José Banegas
 housenumber: ""
 phone: ""
 opening_hours: ""
